# dulge

./: .editorconfig  .gitignore  .mailmap  .travis.yml  3RDPARTY  AUTHORS  COPYING  HACKING  LICENSE  LICENSE.3RDPARTY  Makefile  NEWS  README  README.md  RELEASE  TODO  TRANSLATORS  configure  fix_tests_extra.fish  meson.build  meson_options.txt  rename.py  run-tests  valgrind.supp
.tx/: config
data/: 60:ae:0c:d6:f0:95:17:80:bc:93:46:7a:89:af:a3:2d.plist  Makefile  _dulge  _dulge_src  dulge.7  dulge.bash  dulge.conf  dulge.d.5  libdulge.pc.in  repod-main.conf
doc/: BUILDINFO.5.asciidoc  DULGEBUILD.5.asciidoc  Makefile  alpm-hooks.5.asciidoc  asciidoc.conf  dulge-build.8.asciidoc  dulge-build.conf.5.asciidoc  dulge-conf.8.asciidoc  dulge-db-upgrade.8.asciidoc  dulge-key.8.asciidoc  dulge-repo-add.8.asciidoc  dulge-testpkg.8.asciidoc  dulge-vercmp.8.asciidoc  dulge.8.asciidoc  dulge.conf.5.asciidoc  dulge_api_doxyfile.in  dulge_binary_pkg_content.dot  dulge_pkg_props_dictionary.dot  dulge_transaction_dictionary.dot  footer.asciidoc  index.asciidoc  meson.build  submitting-patches.asciidoc  translation-help.asciidoc
etc/: .gitignore  dulge-build.conf.in  dulge.conf.in
etc/dulge-build.conf.d/: fortran.conf.in  rust.conf.in
include/: Makefile  dulge.h.in  dulge_api_impl.h  mainpage.h  queue.h  uthash.h
include/dulge/: dulge_array.h  dulge_bool.h  dulge_data.h  dulge_dictionary.h  dulge_number.h  dulge_object.h  dulge_string.h  macro.h
lib/: Makefile  archive.c  cb_util.c  conf.c  download.c  initend.c  log.c  package_alternatives.c  package_config_files.c  package_configure.c  package_fulldeptree.c  package_orphans.c  package_register.c  package_remove.c  package_script.c  package_state.c  package_unpack.c  pkgdb.c  pkgdb_conversion.c  plist.c  plist_fetch.c  plist_find.c  plist_match.c  plist_remove.c  proplib_wrapper.c  pubkey2fp.c  repo.c  repo_sync.c  rpool.c  transaction_check_conflicts.c  transaction_check_replaces.c  transaction_check_revdeps.c  transaction_check_shlibs.c  transaction_commit.c  transaction_fetch.c  transaction_files.c  transaction_internalize.c  transaction_ops.c  transaction_pkg_deps.c  transaction_prepare.c  (+5 more)
lib/compat/: humanize_number.c  strcasestr.c
lib/fetch/: common.c  common.h  fetch.c  fetch.h  file.c  ftp.c  http.c
lib/libalpm/: add.c  add.h  alpm.c  alpm.h  alpm_list.c  alpm_list.h  backup.c  backup.h  base64.c  base64.h  be_local.c  be_package.c  be_sync.c  conflict.c  conflict.h  db.c  db.h  deps.c  deps.h  diskspace.c  diskspace.h  dload.c  dload.h  error.c  filelist.c  filelist.h  graph.c  graph.h  group.c  group.h  handle.c  handle.h  hook.c  hook.h  libarchive-compat.h  log.c  log.h  package.c  package.h  pkghash.c  (+19 more)
lib/portableproplib/: prop_array.c  prop_bool.c  prop_data.c  prop_dictionary.c  prop_ingest.c  prop_number.c  prop_object.c  prop_object_impl.h  prop_stack.c  prop_stack.h  prop_string.c  prop_zlib.c  rb.c
mk/: prog.mk  test.mk
proto/: DULGEBUILD-vcs.proto
scripts/: .gitignore  dulge-build-template.pl.in  dulge-build.sh.in  dulge-db-upgrade.sh.in  dulge-key.sh.in  dulge-repo-add.sh.in  libdulgebuild.pc.in  meson.build  wrapper.sh.in
scripts/completion/: bash_completion.in  zsh_completion.in
scripts/libdulgebuild/: autodep.sh.in  buildenv.sh.in  executable.sh.in  integrity.sh.in  lint_config.sh.in  lint_package.sh.in  lint_pkgbuild.sh.in  meson.build  reproducible.sh.in  source.sh.in  srcinfo.sh.in  tidy.sh.in  util.sh.in
scripts/libdulgebuild/autodep/: library_depends.sh.in  library_provides.sh.in  meson.build
scripts/libdulgebuild/buildenv/: buildflags.sh.in  compiler.sh.in  debugflags.sh.in  fortran.sh.in  lto.sh.in  makeflags.sh.in  meson.build  rust.sh.in
scripts/libdulgebuild/executable/: ccache.sh.in  checksum.sh.in  debugedit.sh.in  distcc.sh.in  dulge.sh.in  fakeroot.sh.in  gpg.sh.in  gzip.sh.in  meson.build  sccache.sh.in  strip.sh.in  sudo.sh.in  vcs.sh.in
scripts/libdulgebuild/integrity/: generate_checksum.sh.in  generate_signature.sh.in  meson.build  verify_checksum.sh.in  verify_signature.sh.in
scripts/libdulgebuild/lint_config/: buildenv.sh.in  ext.sh.in  meson.build  nproc.sh.in  packager.sh.in  paths.sh.in  source_date_epoch.sh.in  variable.sh.in
scripts/libdulgebuild/lint_package/: build_references.sh.in  dotfiles.sh.in  file_names.sh.in  meson.build  missing_backup.sh.in
scripts/libdulgebuild/lint_pkgbuild/: arch.sh.in  arch_specific.sh.in  backup.sh.in  changelog.sh.in  checkdepends.sh.in  conflicts.sh.in  depends.sh.in  epoch.sh.in  fullpkgver.sh.in  install.sh.in  makedepends.sh.in  meson.build  optdepends.sh.in  options.sh.in  package_function.sh.in  package_function_variable.sh.in  pkgbase.sh.in  pkgname.sh.in  pkgrel.sh.in  pkgver.sh.in  provides.sh.in  source.sh.in  util.sh.in  variable.sh.in  xdata.sh.in
scripts/libdulgebuild/reproducible/: meson.build  source_date_epoch.sh.in
scripts/libdulgebuild/source/: bzr.sh.in  file.sh.in  fossil.sh.in  git.sh.in  hg.sh.in  local.sh.in  meson.build  svn.sh.in
scripts/libdulgebuild/tidy/: 10-docs.sh.in  10-libtool.sh.in  10-staticlibs.sh.in  50-purge.sh.in  50-strip.sh.in  50-zipman.sh.in  90-emptydirs.sh.in  meson.build
scripts/libdulgebuild/util/: compress.sh.in  config.sh.in  dirsize.sh.in  dulgebuild.sh.in  error.sh.in  meson.build  message.sh.in  option.sh.in  parseopts.sh.in  schema.sh.in  source.sh.in  util.sh.in
scripts/po/: POTFILES.in  meson.build
src/common/: ini.c  ini.h  util-common.c  util-common.h
src/dulge/: .gitignore  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  dulge-conf.c  dulge.c  dulge.h  files.c  meson.build  package.c  package.h  query.c  remove.c  sighandler.c  sighandler.h  sync.c  upgrade.c  util.c  util.h
src/dulge/po/: Makevars  POTFILES.in  meson.build
src/util/: dulge-testpkg.c  dulge-vercmp.c  meson.build
test/: tap.sh
test/dulge/: ChangeLog  README  TODO  meson.build  pactest.py  pmdb.py  pmenv.py  pmfile.py  pmpkg.py  pmrule.py  pmserve.py  pmtest.py  tap.py  util.py
test/scripts/: dulge-build-template_test.sh  (+3 more)
tests/: Makefile
(+450 files in other folders)
