dulge_sources = files('''
  check.h check.c
  conf.h conf.c
  database.c
  deptest.c
  files.c
  package.h package.c
  dulge.h dulge.c
  query.c
  remove.c
  sighandler.h sighandler.c
  sync.c
  callback.h callback.c
  upgrade.c
  util.h util.c
'''.split())

dulge_conf_sources = files('''
  dulge-conf.c
  util.h util.c
  callback.h callback.c
  conf.h conf.c
'''.split())
